--- a/mexin/index.html
+++ b/mexin/index.html
@@ -63,7 +63,7 @@
 <section class="container" >
       <hr class="vertical-space1">
       <div class="nine columns slogan">
-        <h1>Ottawa Home Inspectors</h1>
+        <h2>Ottawa Home Inspectors</h2>
         <h4><strong>Connecting you with the best home inspection in the city. We will find the home inspector that is right for you whether you live in Ottawa, Nepean, Kanata, Stittsville, or Orleans. </strong></h4>
           <a href="contact.html">
           <input name="Estimate" type="button" class="sendbtn" value="Get a Free Estimate" id="btnSend">
@@ -110,6 +110,7 @@
 	
     
 	<!-- /end-Iconboxes-->
+<aside>      
 <div class="homecontact">        
 <div class="eight columns offset-by-five">
 <div class="contact-form">
@@ -133,6 +134,7 @@
 </div>
 </div> 
 </div>    
+</aside>        
 </section>
     <hr class="vertical-space2">
     
